ingress/apple-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apple-app
  namespace: fruite-app
  labels:
    app: apple
spec:
  containers:
  - name: apple-app
    image: hashicorp/http-echo
    args:
    - "-text=apple"
---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  namespace: fruite-app
spec:
  selector:
    app: apple
  ports:
  - port: 5678
