ingress/banana-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: banana-app
  namespace: fruite-app
  labels:
    app: banana
spec:
  containers:
  - name: banana-app
    image: hashicorp/http-echo
    args:
    - "-text=banana"
---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  namespace: fruite-app
spec:
  selector:
    app: banana
  ports:
  - port: 5678
