ingress/nginx-app1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1
  namespace: nginx-app
  labels:
    svc: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx-app1
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-app1
  namespace: nginx-app
  labels:
    app: nginx-app1
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    command: ["/bin/bash", "-c"]
    args:
      - echo "app1 version 1.0.0" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
    ports:
      - containerPort: 80
